--- a/iw/fss/CHANGES
+++ b/iw/fss/CHANGES
@@ -2,8 +2,10 @@
 CHANGES
 #######
 
-2.6.2 (subversion trunk)
-########################
+2.7.0 - 2008/02/26
+##################
+
+* Convert FileSystemStorage Zope 2 product to iw.fss python package
 
 * Added ZCML namespace/directive to wire fields of content types with
   FSS.
