--- a/iw/fss/CHANGES
+++ b/iw/fss/CHANGES
@@ -5,6 +5,10 @@ CHANGES
 2.7.0 - 2008/02/26
 ##################
 
+* Added bin/flat2directory.py that migrates "flat" strategy storage to
+  "directory" strategy storage.
+  [glenfant]
+
 * Convert FileSystemStorage Zope 2 product to iw.fss python package
 
 * Added ZCML namespace/directive to wire fields of content types with
