--- a/iw/fss/TODO
+++ b/iw/fss/TODO
@@ -7,6 +7,8 @@ Issues
 
 * Fix screenshot (deprecated from 2.6)
 
+* Remove FileUtils.py (?) Python has a `shutil` standard module.
+
 Features
 ########
 
