--- a/iw/fss/TODO
+++ b/iw/fss/TODO
@@ -14,6 +14,7 @@ Features
 
 * Include migration script "Attribute storage -> FSS". See ATCT2FSS in
   the collective reposo. https://svn.plone.org/svn/collective/ATCT2FSS/
+  Note that the migration script may use the utils.patchedTypesRegistry.
 
 * Add checksum to be sure files are not corrupted on filesystem.
 
