--- a/iw/fss/TODO
+++ b/iw/fss/TODO
@@ -16,6 +16,8 @@ Features
   the collective reposo. https://svn.plone.org/svn/collective/ATCT2FSS/
   Note that the migration script may use the utils.patchedTypesRegistry.
 
+* Remove ActionProviderBase from tool base classes.
+
 * Add checksum to be sure files are not corrupted on filesystem.
 
 * The "storage-strategy" should be mandatory and not implicitely
@@ -23,3 +25,6 @@ Features
 
 * Deprecate the "flat" storage strategy (may be removed in FSS 2.8 or
   2.9).
+
+* Fix the bobo traverse mess: we should not honour Plone 2.5(-)
+  compatibility (remove patches.py) and fix the traverse warning.
