--- a/iw/fss/CHANGES
+++ b/iw/fss/CHANGES
@@ -2,6 +2,10 @@
 CHANGES
 #######
 
+SVN trunk https://svn.plone.org/svn/collective/iw.fss/trunk
+###########################################################
+
+* ...
 
 2.7.1 - 2008/03/17
 ##################
