- made tests pass !! Whoooohooo - moved patchATType to zcml module as it's only used there and might cause an import conflict with FileSystemStorage module - there were stil FileUtils imports
I hope tests are reliable

--- a/iw/fss/TODO
+++ b/iw/fss/TODO
@@ -12,7 +12,7 @@ Features
 
 * Include migration script "Original storage -> FSS". See ATCT2FSS in
   the collective reposo. https://svn.plone.org/svn/collective/ATCT2FSS/
-  Note that the migration script may use the utils.patchedTypesRegistry.
+  Note that the migration script may use the zcml.patchedTypesRegistry.
 
 * Include migration script "FSS -> original storage" to provide iw.fss
   removal support.
