--- a/iw/fss/locales/fr/LC_MESSAGES/iw.fss.po
+++ b/iw/fss/locales/fr/LC_MESSAGES/iw.fss.po
@@ -11,13 +11,11 @@ msgstr ""
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=1; plural=0;\n"
-"Language-Code: en\n"
-"Language-Name: English\n"
 "Preferred-Encodings: latin1 utf-8\n"
 "Domain: iw.fss\n"
 "Language-code: fr\n"
 "Language-name: Français\n"
-"X-Is-Fallback-For: \n"
+"X-Is-Fallback-For: fr-be fr-ca fr-lu fr-mc fr-ch fr-fr\n"
 
 #. Default: "Remove Backup"
 #: ../skins/filesystemstorage/fss_maintenance_form.cpt
