--- a/iw/fss/TODO
+++ b/iw/fss/TODO
@@ -5,7 +5,7 @@ Pending issues and future features
 Issues
 ######
 
-* Fix screenshot (deprecated from 2.6)
+* Fix CMFEditions support for strategies site1 and site2
 
 Features
 ########
