--- a/iw/fss/CHANGES
+++ b/iw/fss/CHANGES
@@ -2,6 +2,12 @@
 CHANGES
 #######
 
+2.7.4
+#####
+
+* Fix a bug on versioning : previous version of FSS was unable to deal with
+  content having archetypes fields with no storages
+  [clebeaupin]
 
 2.7.3
 #####
