--- a/iw/fss/CHANGES
+++ b/iw/fss/CHANGES
@@ -2,6 +2,15 @@
 CHANGES
 #######
 
+SVN
+###
+
+* removed fss_get in VirtualBinary urls: this old script has been removed with
+  skins. This caused problems with content such as plone news item calling
+  image.tag().
+
+* run tests without shell variable ZOPE_TESTCASE
+
 2.7.4
 #####
 
