--- a/iw/fss/locales/fr/LC_MESSAGES/iw.fss.po
+++ b/iw/fss/locales/fr/LC_MESSAGES/iw.fss.po
@@ -3,180 +3,339 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: FileSystemStorage\n"
-"POT-Creation-Date: 2008-03-05 00:51+0000\n"
+"POT-Creation-Date: 2009-08-19 10:08+0000\n"
 "PO-Revision-Date: 2004-10-27 17:25+0100\n"
-"Last-Translator: Cyrille Lebeaupin <cyrille.lebeaupin@ingeniweb.com>\n"
-"Language-Team: Cyrille Lebeaupin <cyrille.lebeaupin@ingeniweb.com>\n"
+"Last-Translator: Gilles Lenfant <gilles.lenfant@ingeniweb.com>\n"
+"Language-Team: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=1; plural=0;\n"
+"Language-Code: en\n"
+"Language-Name: English\n"
 "Preferred-Encodings: latin1 utf-8\n"
 "Domain: iw.fss\n"
 "Language-code: fr\n"
 "Language-name: Français\n"
 "X-Is-Fallback-For: fr-be fr-ca fr-lu fr-mc fr-ch fr-fr\n"
 
+#. Default: "Migrate"
+#: ../browser/fss_migration_form.pt:131
+msgid "Migrate"
+msgstr "Migrer"
+
 #. Default: "Remove Backup"
-#: ../skins/filesystemstorage/fss_maintenance_form.cpt
+#: ../browser/fss_maintenance_form.pt:140
 msgid "Remove Backup"
 msgstr "Supprimer les fichiers backups"
 
-#. Default: "Save"
-#: ../skins/filesystemstorage/fss_management_form.cpt
-msgid "Save"
-msgstr "Enregistrer"
-
 #. Default: "Update"
-#: ../skins/filesystemstorage/fss_maintenance_form.cpt
+#: ../browser/fss_maintenance_form.pt:106
 msgid "Update"
 msgstr "Mettre à jour"
 
+#. Default: "At that step we assume that some of your contents in this site that have been associated with FSS. See the \"Options\" tab above to see what content types are involved."
+#: ../browser/fss_migration_form.pt:45
+msgid "desc_assumptions"
+msgstr "À ce stade, nous supposons que certains types de contenus ont été associés avec FSS. Revenez à l'onglet \"Options\" ci-dessus pour voir les types de contenus concernés."
+
+#. Default: "Always <strong>backup</strong> all storages (ZODB and FSS directories) of your instance at this step. You have been warned in case of migration failure."
+#: ../browser/fss_migration_form.pt:53
+msgid "desc_backup"
+msgstr "Effectuez une <strong>sauvegarde</strong> de tous les storages (ZODB et FSS) de votre instance à ce stade. En cas d'échec de migration, vous êtes prévenu..."
+
+#. Default: "Check the safety belt \"I'm sure\" and the \"Migrate\" button."
+#: ../browser/fss_migration_form.pt:69
+msgid "desc_go_migrate"
+msgstr "Cochez l'option \"Je suis certain\" puis le bouton \"Migrer\"."
+
+#. Default: "Do not let an user browse or - worse - change any content while the migration is running. This may raise conflicts and content corruption. Hint: shut down Apache."
+#: ../browser/fss_migration_form.pt:61
+msgid "desc_shutdown_pub_access"
+msgstr "Ne laissez pas d'autre utilisateur naviguer ou - pire - modifier tout contenu pendant l'opération de migration. Ceci peut générer des conflits et aboutir à une base de données corrompue. Par exemple, coupez Apache."
+
 #. Default: "All backups, older than the number of days, will be removed."
-#: ../skins/filesystemstorage/fss_maintenance_form.cpt
+#: ../browser/fss_maintenance_form.pt:128
 msgid "description_fss_maintenance_remove_backup"
 msgstr "Les backups qui ont plus de n jours seront effacés."
 
 #. Default: "Updating FileSystem storage, move not valid files to backup and move not valid backups in file storage."
-#: ../skins/filesystemstorage/fss_maintenance_form.cpt
+#: ../browser/fss_maintenance_form.pt:100
 msgid "description_fss_maintenance_update"
 msgstr "La mise à jour des fichiers transfère les fichier non valides en backup et les backups non valides en fichiers."
 
 #. Default: "Check all FSS files and link them to RDF files."
-#: ../skins/filesystemstorage/fss_maintenance_form.cpt
+#: ../browser/fss_maintenance_form.pt:163
 msgid "description_rdf_update"
 msgstr "Mise à jour des fichiers RDF sur le filesystem."
 
+#. Default: "Documentation"
+#: ../browser/controlpanel.py:68
+msgid "documentation_tab"
+msgstr "Documentation"
+
 #. Default: "FSS Maintenance"
-#: ../skins/filesystemstorage/fss_maintenance_form.cpt
+#: ../browser/fss_maintenance_form.pt:15
 msgid "heading_fss_maintenance"
 msgstr "Maintenance"
 
 #. Default: "FSS Management"
-#: ../skins/filesystemstorage/fss_management_form.cpt
+#: ../browser/fss_management_form.pt:15
 msgid "heading_fss_management"
 msgstr "Administration"
 
+#. Default: "I clearly understand the above information and know what I'm doing when clicking the \"Migrate\" button below."
+#: ../browser/fss_migration_form.pt:123
+msgid "help_imsure"
+msgstr "J'ai compris les informations figurant ci-avant et les risques associés. Je connais les impacts et risques consécutifs au clic sur le bouton \"Migrer\" ci-dessous."
+
+#. Default: "Record migration details in the Zope event log file."
+#: ../browser/fss_migration_form.pt:107
+msgid "help_log_migration"
+msgstr "Enregistrer les détails de migration dans le journal des événements Zope (typiquement \"event.log\")."
+
+#. Default: "Enabling RDF will create RDF files in the storage. Read the documentation on usage of RDF files."
+#: ../browser/fss_management_form.pt:145
+msgid "help_rdf_enabled"
+msgstr "L'activation de RDF va créer des fichiers RDF dans les espaces de stockage FSS. Lisez la documentation à propos de l'utilisation de ces fichiers."
+
+#. Default: "Name of the RDF customization script (might be in the \"custom\" layer). Read the documentation about RDF customization. Leave this field empty if you don't need or understand RDF customization."
+#: ../browser/fss_management_form.pt:156
+msgid "help_rdf_script"
+msgstr "Nom du script de personnalisation RDF (pouvant se trouver dans le layer \"custom\"). Lisez la documentation concernant la personnalisation RDF. Laissez ce champ vide si vous n'avez pas besoin de personnalisation RDF."
+
+#. Default: "A low threshold will migrate somehow slowly at the cost of a low memory footprint. Increasing that threshold may speed up the migration and require more memory."
+#: ../browser/fss_migration_form.pt:83
+msgid "help_transaction_threshold"
+msgstr "Un seuil de transaction faible ralentira le processus de migration en contrepartie d'une consommation de mémoire raisonnable. L'augmentation de ce seuil peut accélérer la migration au cout d'une consommation mémoire accrue."
+
+#. Default: "Assumptions"
+#: ../browser/fss_migration_form.pt:43
+msgid "label_assumptions"
+msgstr "Hypothèses"
+
 #. Default: "Average size"
-#: ../skins/filesystemstorage/fss_maintenance_form.cpt
+#: ../browser/fss_maintenance_form.pt:56
 msgid "label_average_size"
 msgstr "Taille moyenne"
 
+#. Default: "Backup"
+#: ../browser/fss_migration_form.pt:51
+msgid "label_backup"
+msgstr "Sauvegarde"
+
 #. Default: "Backup path"
-#: ../skins/filesystemstorage/fss_management_form.cpt
+#: ../browser/fss_management_form.pt:53
 msgid "label_backup_path"
 msgstr "Chemin de stockage des backups"
 
+#. Default: "Content class"
+#: ../browser/fss_management_form.pt:93
+msgid "label_content_class"
+msgstr "Classe de contenu"
+
+#. Default: "Fields and original storages"
+#: ../browser/fss_management_form.pt:96
+msgid "label_fields_storages"
+msgstr "Champs et storages originaux"
+
+#. Default: "Global (default) configuration"
+#: ../browser/fss_management_form.pt:62
+msgid "label_global_configuration"
+msgstr "Configuration globale (par défaut)"
+
+#. Default: "Go..."
+#: ../browser/fss_migration_form.pt:67
+msgid "label_go_migrate"
+msgstr "Exécuter..."
+
+#. Default: "I'm sure"
+#: ../browser/fss_migration_form.pt:119
+msgid "label_imsure"
+msgstr "Je suis certain"
+
 #. Default: "Largest size"
-#: ../skins/filesystemstorage/fss_maintenance_form.cpt
+#: ../browser/fss_maintenance_form.pt:52
 msgid "label_largest_size"
 msgstr "Taille maximale"
 
+#. Default: "Log migration"
+#: ../browser/fss_migration_form.pt:103
+msgid "label_log_migration"
+msgstr "Journalisation de la migration"
+
+#. Default: "Migrating to FSS"
+#: ../browser/fss_migration_form.pt:39
+msgid "label_migrating_to_fss"
+msgstr "Migrer vers FSS"
+
 #. Default: "Not Valid backups"
-#: ../skins/filesystemstorage/fss_maintenance_form.cpt
+#: ../browser/fss_maintenance_form.pt:32
 msgid "label_not_valid_backups_count"
 msgstr "Backups non valides"
 
 #. Default: "Not Valid files"
-#: ../skins/filesystemstorage/fss_maintenance_form.cpt
+#: ../browser/fss_maintenance_form.pt:30
 msgid "label_not_valid_files_count"
 msgstr "Fichiers non valides"
 
+#. Default: "Options"
+#: ../browser/fss_management_form.pt:126
+msgid "label_options_settings"
+msgstr "Options"
+
+#. Default: "Patched types"
+#: ../browser/fss_management_form.pt:87
+msgid "label_patched_types"
+msgstr "Types patchés"
+
 #. Default: "RDF enabled"
-#: ../skins/filesystemstorage/fss_management_form.cpt
+#: ../browser/fss_management_form.pt:141
 msgid "label_rdf_enabled"
 msgstr "RDF activé"
 
 #. Default: "RDF script"
-#: ../skins/filesystemstorage/fss_management_form.cpt
+#: ../browser/fss_management_form.pt:152
 msgid "label_rdf_script"
 msgstr "Script RDF"
 
+#. Default: "Shut down public access"
+#: ../browser/fss_migration_form.pt:59
+msgid "label_shudown_pub_access"
+msgstr "Couper l'accès public"
+
+#. Default: "Site specific configuration"
+#: ../browser/fss_management_form.pt:36
+msgid "label_site_configuration"
+msgstr "Configuration spécifique à ce site"
+
 #. Default: "Smallest size"
-#: ../skins/filesystemstorage/fss_maintenance_form.cpt
+#: ../browser/fss_maintenance_form.pt:54
 msgid "label_smallest_size"
 msgstr "Taille minimale"
 
 #. Default: "Storage path"
-#: ../skins/filesystemstorage/fss_management_form.cpt
+#: ../browser/fss_management_form.pt:41
 msgid "label_storage_path"
 msgstr "Chemin de stockage des fichiers"
 
 #. Default: "Storage strategy"
-#: ../skins/filesystemstorage/fss_management_form.cpt
+#: ../browser/fss_management_form.pt:47
 msgid "label_storage_strategy"
 msgstr "Stratégie de stockage"
 
 #. Default: "Total size"
-#: ../skins/filesystemstorage/fss_maintenance_form.cpt
+#: ../browser/fss_maintenance_form.pt:50
 msgid "label_total_size"
 msgstr "Taille total"
 
+#. Default: "Subtransactions threshold"
+#: ../browser/fss_migration_form.pt:79
+msgid "label_transaction_threshold"
+msgstr "Seuil de sous-transactions"
+
 #. Default: "Valid backups"
-#: ../skins/filesystemstorage/fss_maintenance_form.cpt
+#: ../browser/fss_maintenance_form.pt:28
 msgid "label_valid_backups_count"
 msgstr "Backups valides"
 
 #. Default: "Valid files"
-#: ../skins/filesystemstorage/fss_maintenance_form.cpt
+#: ../browser/fss_maintenance_form.pt:26
 msgid "label_valid_files_count"
 msgstr "Fichiers valides"
 
 #. Default: "FSS Backup"
-#: ../skins/filesystemstorage/fss_maintenance_form.cpt
+#: ../browser/fss_maintenance_form.pt:124
 msgid "legend_fss_backup"
 msgstr "Backup"
 
 #. Default: "Configuration file:"
-#: ../skins/filesystemstorage/fss_management_form.cpt
+#: ../browser/fss_management_form.pt:29
 msgid "legend_fss_configuration"
 msgstr "Fichier de configuration:"
 
-#. Default: "FSS Management"
-#: ../skins/filesystemstorage/fss_management_form.cpt
-msgid "legend_fss_management"
-msgstr "Administration"
-
 #. Default: "FSS Stats"
-#: ../skins/filesystemstorage/fss_maintenance_form.cpt
+#: ../browser/fss_maintenance_form.pt:19
 msgid "legend_fss_stats"
 msgstr "Statistiques"
 
 #. Default: "FSS Update"
-#: ../skins/filesystemstorage/fss_maintenance_form.cpt
+#: ../browser/fss_maintenance_form.pt:96
 msgid "legend_fss_update"
 msgstr "Mise à jour des fichiers"
 
 #. Default: "RDF"
-#: ../skins/filesystemstorage/fss_maintenance_form.cpt
+#: ../browser/fss_maintenance_form.pt:159
 msgid "legend_rdf"
 msgstr "RDF"
 
-#: ../FSSTool.py:326
+#. Default: "Maintenance"
+#: ../browser/controlpanel.py:64
 msgid "maintenance_tab"
 msgstr "Maintenance"
 
-#: ../FSSTool.py:323
+#. Default: "Management"
+#: ../browser/controlpanel.py:62
 msgid "management_tab"
 msgstr "Options"
 
-#. Default: "All relevant backups have been removed."
-#: ../skins/filesystemstorage/fss_maintenance_remove_backup.cpy:22
-msgid "message_backups_removed"
-msgstr "Les fichiers backups périmés ont été supprimés."
-
-#. Default: "File system storage updated"
-#: ../skins/filesystemstorage/fss_maintenance_update.cpy:22
-msgid "message_filesystem_storage_updated"
-msgstr "FileSystemStorage a été mis à jour."
-
 #. Default: "Properties saved"
-#: ../skins/filesystemstorage/fss_management_edit.cpy:23
+#: ../browser/controlpanel.py:151
 msgid "message_properties_saved"
 msgstr "Propriétés enregistrées."
 
-#. Default: "RDF status updated"
-#: ../skins/filesystemstorage/fss_maintenance_update_rdf.cpy:21
-msgid "message_rdf_updated"
-msgstr "Mode RDF mis à jour."
+#. Default: "Migration"
+#: ../browser/controlpanel.py:66
+msgid "migration_tab"
+msgstr "Migration"
+
+#. Default: "${not_valid_files} files for invalid content moved to backup. ${not_valid_backups} files for invalid backups moved to storage."
+#: ../browser/controlpanel.py:219
+msgid "report_fss_updated"
+msgstr "${not_valid_files} fichiers pour contenus non valides ont été déplacés vers l'espace de backup. ${not_valid_backups} fichiers pour des backups non valides ont été déplacés vers le référentiel de stockage."
+
+#. Default: "${count} content items migrated to FSS"
+#: ../browser/controlpanel.py:277
+msgid "report_migration_to_fss"
+msgstr "${count} éléments de contenu ont été migrés pour utiliser FSS"
+
+#. Default: "You didn't check \"I'm sure\", migration canceled"
+#: ../browser/controlpanel.py:263
+msgid "report_no_migration"
+msgstr "Vous n'avez pas coché \"Je suis certain\", la migration est annulée."
+
+#. Default: "Old backups have been removed."
+#: ../browser/controlpanel.py:234
+msgid "report_old_backups_removed"
+msgstr "Les fichiers inutiles de l'espace de backup ont été supprimés."
+
+#. Default: "RDF files have been updated."
+#: ../browser/controlpanel.py:243
+msgid "report_rdf_updated"
+msgstr "Les fichier RDF ont été mis à jour."
+
+#. Default: "You are about to do something potentially harmful. Please read carefully the instructions below before clicking any button here."
+#: ../browser/fss_migration_form.pt:32
+msgid "warning_before_migrating"
+msgstr "Vous êtes sur le point d'effectuer une opération potentiellement dangereuse. Veuillez s'il vous plait lire attentivement les instructions figurant ci-dessous et dans la documentation avent de cliquer quoi que ce soit dans ce formulaire."
+
+#. Default: "THE MIGRATION IS DISABLES BECAUSE THIS SITE ACTUALLY USES THE FSS COMMON DEFAULT CONFIGURATION. MIGRATING IN SUCH SITUATION COULD LOSE CONTENT. PLEASE FIX THE CONFIGURATION AND COME BACK HERE."
+#: ../browser/fss_migration_form.pt:16
+msgid "warning_migrations_disabled"
+msgstr "LA MIGRATION EST DESACTIVÉE PARCE QUE CE SITE UTILISE LA CONFIGURATION FSS GLOBALE (DE L'INSTANCE). EFFECTUER LA MIGRATION DANS CE CONTEXTE CONDUIRA À DES PERTES DE DONNÉES. VEUILLEZ REVOIR LA CONFIGURATION AVANT DE REVENIR ICI."
+
+#. Default: "You didn't configure any content type with FSS. Migrating doesn't make sense."
+#: ../browser/fss_migration_form.pt:24
+msgid "warning_no_type_configured"
+msgstr "Vous n'avez configuré aucun contenu pour utiliser FSS. La migration dans ce cas n'a pas de sens."
+
+#. Default: "THIS SITE USES THE COMMON DEFAULT CONFIGURATION AND STORAGE AREA. AS A CONSEQUENCE, THIS SITE MAY SHARE ITS STORAGE AND BACKUP SPACES WITH OTHER SITES. IN THAT CASE, USING THE FORMS BELOW MAY RESULT IN DATA LOSS ON THE OTHER SITES OF THIS INSTANCE USING THE COMMON STORAGE AND BACKUP AREA. YOU HAVE BEEN WARNED."
+#: ../browser/fss_maintenance_form.pt:80
+msgid "warning_using_global_config1"
+msgstr "CE SITE UTILISE LA CONFIGURATION COMMUNE DE CETTE INSTANCE PAR DÉFAUT. EN CONSÉQUENCE, CE SITE POURRA PARTAGER SON BACK-END DE STOCKAGE AINSI QUE SES BAC-ENDS DE BACKUP AVEC D'AUTRES SITES DE CETTE INSTANCE. DANS CE CAS, L'UTILISATION DES FORMULAIRES CI-DESSOUS PEUT ENTRAINER DES PERTES DE DONNÉES SUR LES ÉVENTUELS AUTRES SITES DE CETTE INSTANCE UTILISANT CES ESPACES COMMUNS DE STOCKAGE ET DE BACKUP. VOUS ÊTES PRÉVENU."
+
+#. Default: "THIS SITE USES THE COMMON DEFAULT CONFIGURATION AND STORAGE AREA. IF THIS DOES NOT MATTER ON DEVELOPMENT SITES, YOU SHOULD NEVER DO THIS IN A PRODUCTION SITE. PLEASE FIX THE CONFIGURATION AS DESCRIBE IN THE DOCUMENTATION BEFORE ADDING ANY CONTENT IN THAT CASE."
+#: ../browser/fss_management_form.pt:17
+msgid "warning_using_global_config2"
+msgstr "CE SITE UTILISE LA CONFIGURATION COMMUNE DE CETTE INSTANCE PAR DÉFAUT. SI CECI NE POSE PAS DE PROBLÈME SUR UN SITE DE DÉVELOPPEMENT, VOUS NE DEVRIEZ JAMAIS FAIRE CECI SUR UN SITE DE PRODUCTION. VEUILLEZ CORRIGER CECI COMME INDIQUÉ DANS LA DOCUMENTATION AVANT D'AJOUTER DES CONTENUS DANS CE CITE."
 
