Updated Czech translation

--- a/iw/fss/locales/cs/LC_MESSAGES/iw.fss.po
+++ b/iw/fss/locales/cs/LC_MESSAGES/iw.fss.po
@@ -4,7 +4,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: FileSystemStorage\n"
 "POT-Creation-Date: 2009-08-19 10:08+0000\n"
-"PO-Revision-Date: 2006-07-01 15:35+0100\n"
+"PO-Revision-Date: 2009-08-22 19:40+0100\n"
 "Last-Translator: Radim Novotny <novotny.radim@gmail.com>\n"
 "Language-Team: CoreNet <info@corenet.cz>\n"
 "MIME-Version: 1.0\n"
@@ -23,7 +23,7 @@ msgstr ""
 #. Default: "Migrate"
 #: ../browser/fss_migration_form.pt:131
 msgid "Migrate"
-msgstr ""
+msgstr "Migrovat"
 
 #. Default: "Remove Backup"
 #: ../browser/fss_maintenance_form.pt:140
@@ -38,22 +38,22 @@ msgstr "Aktualizace"
 #. Default: "At that step we assume that some of your contents in this site that have been associated with FSS. See the \"Options\" tab above to see what content types are involved."
 #: ../browser/fss_migration_form.pt:45
 msgid "desc_assumptions"
-msgstr ""
+msgstr "V tomto kroku předpokládáme, že některé typy položek v portálu již bylo asociovano s FSS. Zkontrolujte prosím záložku \"Nastavení\", kde najdete přehled těchto typů položek."
 
 #. Default: "Always <strong>backup</strong> all storages (ZODB and FSS directories) of your instance at this step. You have been warned in case of migration failure."
 #: ../browser/fss_migration_form.pt:53
 msgid "desc_backup"
-msgstr ""
+msgstr "V tomto kroku vždy <strong>zazálohujte</strong> všechnya úložiště (adresáře s ZODB a FSS). V případě, že se migrace zadaří, tak jsme vás varovali..."
 
 #. Default: "Check the safety belt \"I'm sure\" and the \"Migrate\" button."
 #: ../browser/fss_migration_form.pt:69
 msgid "desc_go_migrate"
-msgstr ""
+msgstr "Zaškrtněte prosím \"Jsem si jist(a)\" a klepněte na tlačítko Migrovat"
 
 #. Default: "Do not let an user browse or - worse - change any content while the migration is running. This may raise conflicts and content corruption. Hint: shut down Apache."
 #: ../browser/fss_migration_form.pt:61
 msgid "desc_shutdown_pub_access"
-msgstr ""
+msgstr "Nedovolte uživatelům procházet portál a už vůbec ne měnit jakýkoli obsah. To by mohlo způsobit ConflictError výjímky a migrace by byla neúspěšná. Nápověda: ukončete dočasně Apache web server, pokud je používán."
 
 #. Default: "All backups, older than the number of days, will be removed."
 #: ../browser/fss_maintenance_form.pt:128
@@ -73,7 +73,7 @@ msgstr "Ověřit všechny soubory v uložišti a napojit je na příslušné RDF
 #. Default: "Documentation"
 #: ../browser/controlpanel.py:68
 msgid "documentation_tab"
-msgstr ""
+msgstr "Dokumentace"
 
 #. Default: "FSS Maintenance"
 #: ../browser/fss_maintenance_form.pt:15
@@ -88,32 +88,32 @@ msgstr "Správa uložiště souborů"
 #. Default: "I clearly understand the above information and know what I'm doing when clicking the \"Migrate\" button below."
 #: ../browser/fss_migration_form.pt:123
 msgid "help_imsure"
-msgstr ""
+msgstr "Rozumím všemu, co je napsáno výše a vím co dělám když kliknu na tlačítko \"Migrovat\"."
 
 #. Default: "Record migration details in the Zope event log file."
 #: ../browser/fss_migration_form.pt:107
 msgid "help_log_migration"
-msgstr ""
+msgstr "Zaznamenávat detaily migrace do Zope event logu."
 
 #. Default: "Enabling RDF will create RDF files in the storage. Read the documentation on usage of RDF files."
 #: ../browser/fss_management_form.pt:145
 msgid "help_rdf_enabled"
-msgstr ""
+msgstr "Povolení RDF vytvoří v FSS úložišti RDF soubory. Více informací se dočtete v dokumentace."
 
 #. Default: "Name of the RDF customization script (might be in the \"custom\" layer). Read the documentation about RDF customization. Leave this field empty if you don't need or understand RDF customization."
 #: ../browser/fss_management_form.pt:156
 msgid "help_rdf_script"
-msgstr ""
+msgstr "Název vlastního RDF skriptu (může být v portal_skins/custom). Přečtěte si prosím dokumentaci, kde lze nalézt informace o vlastních RDF skriptech. Pokud vlastní RDF nepotřebujete nebo tomu nerozumíte, ponechte pole prázdné."
 
 #. Default: "A low threshold will migrate somehow slowly at the cost of a low memory footprint. Increasing that threshold may speed up the migration and require more memory."
 #: ../browser/fss_migration_form.pt:83
 msgid "help_transaction_threshold"
-msgstr ""
+msgstr "Nízký transkační limit způsobé trochu pomalejší migraci, ale potřebuje méně operační paměti."
 
 #. Default: "Assumptions"
 #: ../browser/fss_migration_form.pt:43
 msgid "label_assumptions"
-msgstr ""
+msgstr "Předpoklady"
 
 #. Default: "Average size"
 #: ../browser/fss_maintenance_form.pt:56
@@ -123,7 +123,7 @@ msgstr "Průměrná velikost souborů"
 #. Default: "Backup"
 #: ../browser/fss_migration_form.pt:51
 msgid "label_backup"
-msgstr ""
+msgstr "Záloha"
 
 #. Default: "Backup path"
 #: ../browser/fss_management_form.pt:53
@@ -133,27 +133,27 @@ msgstr "Cesta k záložním souborům"
 #. Default: "Content class"
 #: ../browser/fss_management_form.pt:93
 msgid "label_content_class"
-msgstr ""
+msgstr "Typ položky"
 
 #. Default: "Fields and original storages"
 #: ../browser/fss_management_form.pt:96
 msgid "label_fields_storages"
-msgstr ""
+msgstr "Pole a originální úložiště"
 
 #. Default: "Global (default) configuration"
 #: ../browser/fss_management_form.pt:62
 msgid "label_global_configuration"
-msgstr ""
+msgstr "Globální (výchozí) konfigurace"
 
 #. Default: "Go..."
 #: ../browser/fss_migration_form.pt:67
 msgid "label_go_migrate"
-msgstr ""
+msgstr "Start..."
 
 #. Default: "I'm sure"
 #: ../browser/fss_migration_form.pt:119
 msgid "label_imsure"
-msgstr ""
+msgstr "Jsem si jist(a)"
 
 #. Default: "Largest size"
 #: ../browser/fss_maintenance_form.pt:52
@@ -163,12 +163,12 @@ msgstr "Velikost největšího souboru"
 #. Default: "Log migration"
 #: ../browser/fss_migration_form.pt:103
 msgid "label_log_migration"
-msgstr ""
+msgstr "Záznam migrace"
 
 #. Default: "Migrating to FSS"
 #: ../browser/fss_migration_form.pt:39
 msgid "label_migrating_to_fss"
-msgstr ""
+msgstr "Migrace na FSS"
 
 #. Default: "Not Valid backups"
 #: ../browser/fss_maintenance_form.pt:32
@@ -183,12 +183,12 @@ msgstr "Neplatných souborů"
 #. Default: "Options"
 #: ../browser/fss_management_form.pt:126
 msgid "label_options_settings"
-msgstr ""
+msgstr "Nastavení"
 
 #. Default: "Patched types"
 #: ../browser/fss_management_form.pt:87
 msgid "label_patched_types"
-msgstr ""
+msgstr "Asociované typy"
 
 #. Default: "RDF enabled"
 #: ../browser/fss_management_form.pt:141
@@ -203,12 +203,12 @@ msgstr "RDF skript"
 #. Default: "Shut down public access"
 #: ../browser/fss_migration_form.pt:59
 msgid "label_shudown_pub_access"
-msgstr ""
+msgstr "Zastavení veřejného přístupu k portálu"
 
 #. Default: "Site specific configuration"
 #: ../browser/fss_management_form.pt:36
 msgid "label_site_configuration"
-msgstr ""
+msgstr "Specifická konfigurace pro tento portál"
 
 #. Default: "Smallest size"
 #: ../browser/fss_maintenance_form.pt:54
@@ -223,7 +223,7 @@ msgstr "Cesta k úložišti"
 #. Default: "Storage strategy"
 #: ../browser/fss_management_form.pt:47
 msgid "label_storage_strategy"
-msgstr ""
+msgstr "Strategie úložiště"
 
 #. Default: "Total size"
 #: ../browser/fss_maintenance_form.pt:50
@@ -233,7 +233,7 @@ msgstr "Celková velikost"
 #. Default: "Subtransactions threshold"
 #: ../browser/fss_migration_form.pt:79
 msgid "label_transaction_threshold"
-msgstr ""
+msgstr "Transakční limit"
 
 #. Default: "Valid backups"
 #: ../browser/fss_maintenance_form.pt:28
@@ -253,7 +253,7 @@ msgstr "Zálohování uložiště souborů"
 #. Default: "Configuration file:"
 #: ../browser/fss_management_form.pt:29
 msgid "legend_fss_configuration"
-msgstr ""
+msgstr "Konfigurační soubor:"
 
 #. Default: "FSS Stats"
 #: ../browser/fss_maintenance_form.pt:19
@@ -273,70 +273,70 @@ msgstr "RDF"
 #. Default: "Maintenance"
 #: ../browser/controlpanel.py:64
 msgid "maintenance_tab"
-msgstr ""
+msgstr "Údržba"
 
 #. Default: "Management"
 #: ../browser/controlpanel.py:62
 msgid "management_tab"
-msgstr ""
+msgstr "Správa"
 
 #. Default: "Properties saved"
 #: ../browser/controlpanel.py:151
 msgid "message_properties_saved"
-msgstr ""
+msgstr "Nastavení bylo uloženo"
 
 #. Default: "Migration"
 #: ../browser/controlpanel.py:66
 msgid "migration_tab"
-msgstr ""
+msgstr "Migrace"
 
 #. Default: "${not_valid_files} files for invalid content moved to backup. ${not_valid_backups} files for invalid backups moved to storage."
 #: ../browser/controlpanel.py:219
 msgid "report_fss_updated"
-msgstr ""
+msgstr "Počet neplatných souborů, které byly přesunuty do zálohy: ${not_valid_files}. Počet neplatných záložních souborů, přesunutých do úložiště: ${not_valid_backups}."
 
 #. Default: "${count} content items migrated to FSS"
 #: ../browser/controlpanel.py:277
 msgid "report_migration_to_fss"
-msgstr ""
+msgstr "Počet položek zmigrovaných na FSS: ${count}."
 
 #. Default: "You didn't check \"I'm sure\", migration canceled"
 #: ../browser/controlpanel.py:263
 msgid "report_no_migration"
-msgstr ""
+msgstr "Není zaškrtnuté pole \"Jsem si jist(a)\"."
 
 #. Default: "Old backups have been removed."
 #: ../browser/controlpanel.py:234
 msgid "report_old_backups_removed"
-msgstr ""
+msgstr "Staré záložní soubory byly smzány."
 
 #. Default: "RDF files have been updated."
 #: ../browser/controlpanel.py:243
 msgid "report_rdf_updated"
-msgstr ""
+msgstr "Soubory RDF byly aktualizovány."
 
 #. Default: "You are about to do something potentially harmful. Please read carefully the instructions below before clicking any button here."
 #: ../browser/fss_migration_form.pt:32
 msgid "warning_before_migrating"
-msgstr ""
+msgstr "Pravděpodoně se snažíte udělat něco, co mlže poškodit vaše data. Prosím přečtěte si pozorně instrukce níže předtím, než kliknete na toto tlačítko."
 
 #. Default: "THE MIGRATION IS DISABLES BECAUSE THIS SITE ACTUALLY USES THE FSS COMMON DEFAULT CONFIGURATION. MIGRATING IN SUCH SITUATION COULD LOSE CONTENT. PLEASE FIX THE CONFIGURATION AND COME BACK HERE."
 #: ../browser/fss_migration_form.pt:16
 msgid "warning_migrations_disabled"
-msgstr ""
+msgstr "MIGRACE JE ZAKÁZÁNA, PROTOŽE TENTO PORTÁL POUŽÍVÁ VÝCHOZÍ KONFIGURACI FSS. MIGRACE V TOMTO STAVU MŮŽE ZPÚSOBIT ZTRÁTU DAT. OPRAVTE PROSÍM KONFIGURACI FSS A VRAŤTE SE ZPĚT."
 
 #. Default: "You didn't configure any content type with FSS. Migrating doesn't make sense."
 #: ../browser/fss_migration_form.pt:24
 msgid "warning_no_type_configured"
-msgstr ""
+msgstr "Nemáte nakonfigurávány žádné typy obsahu pro FSS úložiště. Migrace nemá význam."
 
 #. Default: "THIS SITE USES THE COMMON DEFAULT CONFIGURATION AND STORAGE AREA. AS A CONSEQUENCE, THIS SITE MAY SHARE ITS STORAGE AND BACKUP SPACES WITH OTHER SITES. IN THAT CASE, USING THE FORMS BELOW MAY RESULT IN DATA LOSS ON THE OTHER SITES OF THIS INSTANCE USING THE COMMON STORAGE AND BACKUP AREA. YOU HAVE BEEN WARNED."
 #: ../browser/fss_maintenance_form.pt:80
 msgid "warning_using_global_config1"
-msgstr ""
+msgstr "TENTO PORTÁL POUŽÍVÁ VÝCHOZÍ KONFIGURACI FSS. TO ZNAMENÁ ŽE PORTÁL MŮŽE POUŽÍVAT STEJNÉ ÚLOŽIŠTĚ JAKO JINÉ PORTÁLY NA STEJNÉM SERVERU. POKUD BUDETE POUŹÍVAT NÍŽE ZOBRAZENÉ FORMULÁŘE, MŮŽE DOJÍTE KE ZTRÁTĚ DAT V TOMTO I JINÝCH PORTÁLECH!! VAROVALI JSME VÁS."
 
 #. Default: "THIS SITE USES THE COMMON DEFAULT CONFIGURATION AND STORAGE AREA. IF THIS DOES NOT MATTER ON DEVELOPMENT SITES, YOU SHOULD NEVER DO THIS IN A PRODUCTION SITE. PLEASE FIX THE CONFIGURATION AS DESCRIBE IN THE DOCUMENTATION BEFORE ADDING ANY CONTENT IN THAT CASE."
 #: ../browser/fss_management_form.pt:17
 msgid "warning_using_global_config2"
-msgstr ""
+msgstr "TENTO PORTÁL POUŽÍVÁ VÝCHOZÍ KONFIGURACI FSS. TO NEVADÍ POKUD SE JEDNÁ O VÝVOJOVOU INSTANCI, ALE NA OSTRÉM SERVERU BY TOMU TAK BÝT NEMĚLO. OPRAVTE PROSÍM KONFIGURACI JAK JE UVEDENO V DOKUMENTACI DŘÍVE NEŽ DO PORTÁLU PŘIDÁTE JAKÝKOLI OBSAH."
 
